--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,9 @@
+<div class="container" >
+<div class='row'>
+<div class='col-sm-12'>
+<table class="table">
 <h1> PRODUCTOS </h1>
 
-<table>
 	<tr>
 <th>Id</th>
 <th>Nombres	</th>
@@ -20,3 +23,6 @@
 <% end %>
 
 </table>
+</div>
+</div>
+</div>
