--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,12 @@
 <table class="table">
 <h1> PRODUCTOS </h1>
 
+<div class='text-right'>
+<div>
+	<%= link_to 'PUBLICAR PRODUCTO', new_product_path, class: 'btn btn-primary' %> 
+
+</div>
+
 	<tr>
 <th>Id</th>
 <th>Nombres	</th>
