--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,7 @@
 <% @products.each do |product| %>
 <tr>
 	<td> <%= product.id %></td>
+	<td><%= link_to product.name, product %></td>
 	<td> <%= product.name %></td>
 	<td> <%= product.url %></td>
 	<td> <%= product.description %></td>
