--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,6 +16,7 @@
 <th>Url</th>
 <th>Descripcion</th>
 <th></th>
+<th></th>
 </tr>
 <% @products.each do |product| %>
 <tr>
@@ -25,6 +26,7 @@
 	<td> <%= product.url %></td>
 	<td> <%= product.description %></td>
 	<td><%= link_to 'Editar', edit_product_path(product) %></td>
+	<td><%= link_to "Eliminar", product, method: :delete, data: { confirm: "¿Estás seguro de eliminar este producto?" } %></td>
 
 
 </tr>
